[project]
name = "pipecat-voice"
version = "0.1.0"
description = ""
authors = [
    {name = "syahrulhamdani"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pipecat-ai[google,silero] (>=0.0.67,<0.1.0)",
    "fastapi[all] (>=0.115.2,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
